--- a/careerpath_project/index.html
+++ b/careerpath_project/index.html
@@ -152,7 +152,7 @@
         // BEST PRACTICE: Use Vercel Environment Variables. You would set a variable named
         // `PUBLIC_API_URL` in your Vercel project settings and use that here. For a simple
         // project without a build step, hardcoding the production URL is a quick fix.
-        const API_BASE_URL = "https://jri-sagar369rs-projects.vercel.app/"; // <-- IMPORTANT: CHANGE THIS!
+        const API_BASE_URL = "https://jri-l5ci.vercel.app/"; // <-- IMPORTANT: CHANGE THIS!
 
         let apiToken = null;
         let scoreChart = null;
