--- a/careerpath_project/index.html
+++ b/careerpath_project/index.html
@@ -134,8 +134,7 @@
     </div>
 
     <script>
-        // --- CONFIG & STATE ---
-        // The API_BASE_URL is now an empty string. The /api/ prefix is added to each fetch call.
+        // The API_BASE_URL is an empty string, as the API is on the same domain.
         const API_BASE_URL = ""; 
 
         let apiToken = null;
