--- a/careerpath_project/index.html
+++ b/careerpath_project/index.html
@@ -137,7 +137,7 @@
         // --- CONFIG & STATE ---
         // ✅ IMPORTANT: Replace this with the real, public URL of your deployed backend.
         // It must NOT have a slash at the end.
-        const API_BASE_URL = "https://your-backend-url.onrender.com"; 
+        const API_BASE_URL = "https://jri-omega.vercel.app"; 
 
         let apiToken = null;
         let scoreChart = null;
