--- a/careerpath_project/index.html
+++ b/careerpath_project/index.html
@@ -135,7 +135,8 @@
 
     <script>
         // ✅ The API_BASE_URL is a relative path, which works with the vercel.json setup.
-        const API_BASE_URL = ""; 
+        // ✅ Replace the old URL with your working Render URL
+        const API_BASE_URL = "https://jri-uz4s.onrender.com";
 
         let apiToken = null;
         let scoreChart = null;
