--- a/careerpath_project/index.html
+++ b/careerpath_project/index.html
@@ -135,7 +135,7 @@
 
     <script>
         // ✅ The API_BASE_URL is a relative path, which works with the vercel.json setup.
-        const API_BASE_URL = ""; 
+        const API_BASE_URL = "https://jri-omega.vercel.app"; 
 
         let apiToken = null;
         let scoreChart = null;
